// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements AnypointmqMessageBindingElement given headers field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(AnypointmqMessageBindingElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements AnypointmqMessageBindingElement should refract to semantic ApiDOM tree 1`] = `
(AnypointmqMessageBindingElement
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
